--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,12 @@
         <item>Shengavit</item>
     </string-array>
     <string-array name="category">
+        <item>All</item>
         <item>RENT</item>
         <item>SALE</item>
     </string-array>
     <string-array name="type">
+        <item>All</item>
         <item>APPARTMENT</item>
         <item>HOUSE</item>
         <item>COMERCIAL</item>
